automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -516,9 +516,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(df)"
    ]
@@ -545,7 +556,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Practice using some of these methods"
+    "#Practice using some of these methods\n",
+    "df.info(())"
    ]
   },
   {
