automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -557,7 +557,8 @@
    "outputs": [],
    "source": [
     "#Practice using some of these methods\n",
-    "df.info(())"
+    "df.info()\n",
+    "df.columsn"
    ]
   },
   {
