--- a/index.ipynb
+++ b/index.ipynb
@@ -608,6 +608,7 @@
    "source": [
     "#Use tab completion to investigate at least 3 other methods under the df object. \n",
     "#Pull up their docstrings and investigate what they do.\n",
+    "df.head\n",
     "df."
    ]
   },
