automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -609,7 +609,7 @@
     "#Use tab completion to investigate at least 3 other methods under the df object. \n",
     "#Pull up their docstrings and investigate what they do.\n",
     "df.head\n",
-    "df."
+    "df.values"
    ]
   },
   {
