automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1246,7 +1246,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code/answer here"
+    "#Your code/answer here\n",
+    "list_price.mean"
    ]
   },
   {
