automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1247,7 +1247,7 @@
    "outputs": [],
    "source": [
     "#Your code/answer here\n",
-    "list_price.mean"
+    "df.list_price.mean"
    ]
   },
   {
