--- a/index.ipynb
+++ b/index.ipynb
@@ -1242,12 +1242,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65.14199840959138"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code/answer here\n",
-    "df.list_price.mean"
+    "df.list_price.mean()"
    ]
   },
   {
