--- a/index.ipynb
+++ b/index.ipynb
@@ -1196,7 +1196,7 @@
     }
    ],
    "source": [
-    "df.play_star_rating.value_counts? #Read the docstring and tinker! See how it works."
+    "df.play_star_rating.value_counts() #Read the docstring and tinker! See how it works."
    ]
   },
   {
