automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1262,7 +1262,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code/answer here"
+    "#Your code/answer here\n",
+    "df."
    ]
   },
   {
