automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1258,12 +1258,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0             Bird Island Egg Heist\n",
+       "1                Piggy Plane Attack\n",
+       "2                  Piggy Car Escape\n",
+       "3    United States Capitol Building\n",
+       "4     Solomon R. Guggenheim Museum®\n",
+       "Name: set_name, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code/answer here\n",
-    "df."
+    "df.set_name.head()"
    ]
   },
   {
