automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1511,7 +1511,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "df."
    ]
   }
  ],
