automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1512,8 +1512,15 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "df."
+    "df.ages.hist()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
